Fix z-index on arrows info

--- a/assets/_sass/views/_index.scss
+++ b/assets/_sass/views/_index.scss
@@ -397,7 +397,7 @@
   height: 22px;
   display: inline-block;
   cursor: pointer;
-  z-index: 999999;
+  z-index: 999;
 }
 
 .np-arrow-prev {
